EVE CORE
http://almende.github.com/eve/


<not yet released>, version 0.15

- improved stability of the agents context.


2012-12-21, version 0.14

- Implemented synchronous send for the XmppService.
- Re-implemented the LogAgent, used to monitor an agents events in their 
  web interface.


2012-12-14, version 0.13

- Updated the agents web interface to show all its urls
- Renamed the parameter XmppService.serviceName to XmppService.service


2012-12-13, version 0.12

- The AgentServlet registers itself to the AgentFactory now. 
  Servlet configuration is therefore moved from eve.yaml to web.xml.
- The method getAgentFactory is moved from the context to the agent itself.
- The method getScheduler is moved from the context to the agent itself.
- Scheduler must be configured in eve.yaml now, the scheduler is no longer 
  coupled to the ContextFactory.


2012-12-06, version 0.11

- Major change in the core of Eve. Incompatible with previous versions.
- Implemented support for multiple communication services. 
- Agents must now explicitly be created before they can be invoked. The
  AgentFactory contains methods to create, get, and delete agents, and 
  the ContextFactory is adjusted for this purpose.
- Implemented messaging protocol XMPP.
- Configuration of agent classes is no longer needed.
- JSONRequest, JSONResponse, and JSONRPCException are now less strict, they
  are more friendly to invalid input.


2012-09-18, version 0.10

- The web interface of the agents now has an option to enable/disable logging
  events using a LogAgent.
- Fixed some minor bugs in error reporting in the agents web interface.


2012-09-10, version 0.9.1

- Fixed: Context did not load an agents context with a case insensitive 
  className.


2012-09-07, version 0.9

- Created a record logger to log requests to agents. Not yet in use though.
- AgentFactory created which allows for local creation/invocation of agents.